@@ -102,7 +102,6 @@ sub new_varray { SPVM::ExchangeAPI::new_varray($SPVM_ENV, @_) }
 sub new_varray_from_bin { SPVM::ExchangeAPI::new_varray_from_bin($SPVM_ENV, @_) }
 
 sub hash { SPVM::ExchangeAPI::hash($SPVM_ENV, @_) }
-sub list { SPVM::ExchangeAPI::list($SPVM_ENV, @_) }
 
 1;
 
