@@ -198,8 +198,6 @@ SPVM::ExchangeAPI - SPVM Exchange API
 
 =head2 hash
 
-=head2 list
-
 =head2 memory_blocks_count
 
 =head2 new_barray
